--- a/styles/main.css
+++ b/styles/main.css
@@ -10,24 +10,43 @@ html {
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
+body {
+  background-color: #233067;
+  font-size: 18px; }
+
 .container {
   max-width: 68em;
   margin-left: auto;
   margin-right: auto;
-  background-color: #233067;
   color: white;
-  font-family: "Lucida Console", Monaco, monospace;
-  max-width: 100%; }
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: 300; }
   .container::after {
     clear: both;
     content: "";
     display: table; }
+  @media screen and (min-width: 501px) and (max-width: 840px) {
+    .container {
+      max-width: 700px; } }
+
+@media screen and (min-width: 501px) and (max-width: 840px) {
+  .label {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    .label:last-child {
+      margin-right: 0; } }
 
 .block {
   float: left;
   display: block;
   margin-right: 2.35765%;
-  width: 31.76157%; }
+  width: 31.76157%;
+  /* .block {
+    margin-right: auto;
+    margin-left: auto;
+  } */ }
   .block:last-child {
     margin-right: 0; }
   @media screen and (min-width: 501px) and (max-width: 840px) {
@@ -37,14 +56,7 @@ html {
       margin-right: 2.35765%;
       width: 100%; }
       .block:last-child {
-        margin-right: 0; }
-      .block .label {
-        float: left;
-        display: block;
-        margin-right: 2.35765%;
-        width: 48.82117%; }
-        .block .label:last-child {
-          margin-right: 0; } }
+        margin-right: 0; } }
   @media screen and (max-width: 500px) {
     .block {
       float: left;
@@ -53,30 +65,38 @@ html {
       width: 100%; }
       .block:last-child {
         margin-right: 0; } }
-  .block input {
-    border: solid 4px red;
+  .block input,
+  .block textarea {
+    border: solid 2px #017e83;
+    border-radius: 7px;
+    box-shadow: 0px 0px 5px #017e83;
     float: left;
     display: block;
-    margin-right: 2.35765%;
+    margin-right: 7.42297%;
     width: 100%;
     background-color: #233067; }
-    .block input:last-child {
+    .block input:last-child,
+    .block textarea:last-child {
       margin-right: 0; }
     @media screen and (min-width: 501px) and (max-width: 840px) {
-      .block input {
+      .block input,
+      .block textarea {
         float: left;
         display: block;
         margin-right: 2.35765%;
-        width: 31.76157%; }
-        .block input:last-child {
+        width: 74.41059%; }
+        .block input:last-child,
+        .block textarea:last-child {
           margin-right: 0; } }
+  .block textarea {
+    height: 100px; }
   .block .question {
-    display: inline-block;
+    /* display: inline-block; */
     float: left;
     display: block;
-    margin-right: 2.35765%;
-    width: 31.76157%;
-    clear: both; }
+    margin-right: 7.42297%;
+    width: 100%;
+    /* clear: both; */ }
     .block .question:last-child {
       margin-right: 0; }
     @media screen and (min-width: 501px) and (max-width: 840px) {
@@ -84,28 +104,32 @@ html {
         float: left;
         display: block;
         margin-right: 2.35765%;
-        width: 31.76157%; }
+        width: 23.23176%; }
         .block .question:last-child {
           margin-right: 0; } }
   .block .query {
-    display: inline-block;
-    width: 100%;
-    clear: both; }
-  .block textarea {
-    border: solid 4px red;
-    background-color: #233067;
-    width: 100%;
-    height: 100px; }
+    /* display: inline-block; */
+    /* width: 100%; */
+    /* clear: both; */ }
     @media screen and (min-width: 501px) and (max-width: 840px) {
-      .block textarea {
+      .block .query {
         float: left;
         display: block;
         margin-right: 2.35765%;
-        width: 48.82117%; }
-        .block textarea:last-child {
+        width: 100%; }
+        .block .query:last-child {
           margin-right: 0; } }
-  .block .block {
-    margin-right: auto;
-    margin-left: auto; }
+  .block textarea {
+    color: #8f8f8f;
+    font-size: 15px; }
+  .block input {
+    color: #8f8f8f;
+    font-size: 15px; }
+
+@media screen and (min-width: 501px) and (max-width: 840px) {
+  .bio .question,
+  .affiliations .question,
+  .comments .question {
+    margin-top: 30px; } }
 
 /*# sourceMappingURL=main.css.map */
