--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,3 @@
-/* \$visual-grid: true;
- */
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -92,20 +90,20 @@ body {
     display: block;
     margin-right: 7.42297%;
     width: 100%;
-    background-color: #233067; }
+    background-color: #233067;
+    font-size: 20px;
+    color: #017e83; }
     .block select:last-child {
       margin-right: 0; }
   .block textarea {
     height: 100px;
-    color: #8f8f8f;
+    color: #017e83;
     font-size: 20px; }
   .block .question {
-    /* display: inline-block; */
     float: left;
     display: block;
     margin-right: 7.42297%;
-    width: 100%;
-    /* clear: both; */ }
+    width: 100%; }
     .block .question:last-child {
       margin-right: 0; }
     @media screen and (min-width: 501px) and (max-width: 840px) {
@@ -125,21 +123,31 @@ body {
       .block .query:last-child {
         margin-right: 0; } }
   @media screen and (min-width: 501px) and (max-width: 840px) {
-    .block .query .dropper {
+    .block .query select {
       float: left;
       display: block;
       margin-right: 2.35765%;
       width: 100%; }
-      .block .query .dropper:last-child {
+      .block .query select:last-child {
         margin-right: 0; } }
   .block input {
-    color: #8f8f8f;
+    color: #017e83;
     font-size: 20px; }
+  .block textarea,
   .block input:focus {
-    color: #De2a00; }
+    color: #017e83; }
   .block .dropper {
-    font-color: #017e83;
-    display: inline-block; }
+    display: inline-block;
+    width: 100%;
+    color: #017e83; }
+  .block ::-webkit-input-placeholder {
+    color: #017e83; }
+  .block :-moz-placeholder {
+    color: #017e83; }
+  .block ::-moz-placeholder {
+    color: #017e83; }
+  .block :-ms-input-placeholder {
+    color: #017e83; }
 
 @media screen and (min-width: 501px) and (max-width: 840px) {
   .bio .question,
