--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,4 @@
 @import 'bourbon/bourbon';
-/* \$visual-grid: true;
- */
 @import 'neat/neat';
 $tablet: new-breakpoint(min-width 501px max-width 840px);
 $mobile: new-breakpoint(max-width 500px);
@@ -16,6 +14,7 @@ body {
   font-size: 22px;
 
 }
+
 .container {
   @include outer-container;
   color: $mystic;
@@ -27,12 +26,14 @@ body {
   }
 
 }
+
 .label {
   @include media($tablet) {
     @include span-columns(6);
   }
 
 }
+
 .block {
   @include span-columns (4);
 
@@ -40,9 +41,11 @@ body {
     @include span-columns(12);
 
   }
+
   @include media($mobile) {
     @include span-columns(12)
   }
+
   input,
   textarea {
     border: solid 2px $teal;
@@ -51,28 +54,33 @@ body {
     @include span-columns(4 of 4);
     background-color: $biscay;
 
+
     @include media($tablet) {
       @include span-columns(9 of 12);
     }
 
   }
+
   select {
     border: solid 2px $teal;
     border-radius: 7px;
     box-shadow: 0 0 px $teal;
     @include span-columns(4 of 4);
     background-color: $biscay;
+    font-size: 20px;
+    color: $teal;
 
   }
+
   textarea {
     height: 100px;
-    color: #8f8f8f;
+    color: $teal;
     font-size: 20px;
   }
+
   .question {
-    /* display: inline-block; */
     @include span-columns(4 of 4);
-    /* clear: both; */
+
 
     @include media($tablet) {
       @include span-columns(3 of 12);
@@ -86,7 +94,7 @@ body {
 
     }
 
-    .dropper {
+    select {
       @include media($tablet) {
         @include span-columns(12 of 12);
       }
@@ -94,19 +102,41 @@ body {
   }
 
   input {
-    color: #8f8f8f;
+    color: $teal;
     font-size: 20px;
   }
 
+  textarea,
   input:focus {
-    color: #De2a00;
+    color: $teal;
     }
 
   .dropper {
-    font-color: $teal;
     display: inline-block;
+    width: 100%;
+    color: $teal;
     }
+
+  ::-webkit-input-placeholder {
+      color:    $teal;
+    }
+
+  :-moz-placeholder {
+    color:    $teal;
+    }
+
+  ::-moz-placeholder {
+    color: $teal;
+  }
+
+  :-ms-input-placeholder {
+    color:    $teal;
+    }
+
+
+
 }
+
 .bio .question,
 .affiliations .question,
 .comments .question {
